# Autonomous-Drone

arduino/drone_control/: esp32_mavlink.ino
ros_ws/: build_package.sh
ros_ws/launch/: autonomous_drone_sim.launch.py
ros_ws/src/autonomous_drone/: package.xml  setup.cfg  setup.py
ros_ws/src/autonomous_drone/autonomous_drone/: subscribers.py
ros_ws/src/autonomous_drone/autonomous_drone/perception/: perception_subs.py  vslam_node.py
ros_ws/src/autonomous_drone/launch/: autonomous_drone_hw.launch.py
ros_ws/src/autonomous_drone/scripts/: vslam_node
