<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomous_drone</name>
  <version>1.0.0</version>
  <description>Autonomous drone with object detection, avoidance, and following capabilities</description>
  <maintainer email="nmhieu.pham@gmail.com">Nguyen Pham</maintainer>
  <maintainer email="aaron.mundanilkunathil@sjsu.edu">Aaron Mundanilkunathil</maintainer>
  <license>GPL-3.0-or-later</license>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>mavros_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
